--- a/style/index.css
+++ b/style/index.css
@@ -57,9 +57,9 @@ body {
 }
 
 h1 {
-    font-size: 7rem;
+    font-size: 8rem;
     font-weight: bold;
-    color: #FF4C29;
+    color: #2C394B;
 }
 
 h2 {
@@ -68,11 +68,16 @@ h2 {
     font-weight: bold;
 }
 
+p {
+    color: #C3BA85;
+    font-size: 2rem;
+}
+
 button {
     width: 10%;
     font-size: 2rem;
     background-color: #2C394B;
-    border: 1px solid #FF4C29;
+    border: 1px solid #C3BA85;
     color: #fff;
     padding: .25%;
 }
@@ -89,10 +94,11 @@ button {
 .navbar {
     display: flex;
     justify-content: space-between;
-    background-color: #fff;
+    background-color: #ffffffd0;
     padding: 1% 1%;
     align-items: center;
     width: 100%;
+    position: fixed;
 }
 
 .links {
@@ -108,7 +114,7 @@ button {
 }
 
 .links a:hover {
-    color:#FF4C29;
+    color:#C3BA85;
 }
 
 /* Top Styling */
@@ -117,19 +123,66 @@ button {
     display: flex;
     justify-content: center;
     text-align: center;
-    height: 90vh;
+    height: 120vh;
 }
 
 .top {
-    background-image: url(../images/Weights.jpg);
-    background-position: center;
+    background-image: url(../images/seattlesky.jpg);
+    background-position: bottom;
     width: 100%; 
-    margin: 2% 2%; 
+    margin: 6% 8%; 
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
 .top-text button{
-    width: 20%
+    width: 30%
 }
+
+/* Project Styles */
+
+.container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+    text-align: center;
+}
+
+.project {
+    width: 30%;
+}
+
+.image1 {
+    background-image: url(../images/Pine.jpg);
+    height: 60vh;
+}
+
+.image2 {
+    background-image: url(../images/moon.jpg);
+    height: 60vh;
+}
+
+.image3 {
+    background-image: url(../images/eagleriver.jpg);
+    height: 60vh;
+}
+
+.image4 {
+    background-image: url(../images/bcski.jpg);
+    height: 60vh;
+    background-position: center;
+}
+
+.image5 {
+    background-image: url(../images/moon.jpg);
+    height: 60vh;
+}
+
+.image6 {
+    background-image: url(../images/moon.jpg);
+    height: 60vh;
+}
+
+/* Footer Styles */
