--- a/style/index.css
+++ b/style/index.css
@@ -115,6 +115,9 @@ a {
     padding: 0 2%;
     color: #2C394B;
     font-size: 2rem;
+    border: 1px solid #C3BA85;
+    background-color: #fff;
+    
 }
 
 .links a:hover {
@@ -213,3 +216,43 @@ a {
 .socials a:hover {
     color: #C3BA85;
 }
+
+/* Media Queries Styles */
+
+/* Media - 800px */
+@media (max-width: 800px) {
+
+}
+
+/* Media - 500px */
+@media (max-width: 500px) {
+    .navbar {
+        flex-wrap: wrap;
+        align-items: center;
+        text-align: center;
+    }
+    .webname {
+        width: 100%;
+    }
+    .webname h2 {
+        font-size: 7rem;
+    }
+    .links {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+    }
+    .links a{
+        margin: .15% 0;
+    }
+    .top {
+        height: 50vh;
+        margin-top: 60%;
+    }
+    h1 {
+        font-size: 4rem;
+    }
+    
+}   
